Search bar now in separate box from map. New issue: lots of search bar bugs on mobile (but works great on web!)

--- a/SAFE/www/css/style.css
+++ b/SAFE/www/css/style.css
@@ -68,11 +68,9 @@
 
 #searchBox {
   background-color: #fff;
-  font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
+  padding: 5px;
   text-overflow: ellipsis;
   width: 300px;
 }
